name:           reflex-starter
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/reflex-starter#readme>
homepage:       https://github.com/githubuser/reflex-starter#readme
bug-reports:    https://github.com/githubuser/reflex-starter/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.org

source-repository head
  type: git
  location: https://github.com/githubuser/reflex-starter

executable reflex-starter
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  --Please edit the nix file after regeneated
  if impl(ghcjs)
    build-depends: ghcjs-base
  if !impl(ghcjs)
    build-depends: ghcjs-base-stub

  build-depends:
      aeson >= 1.3
    , base >=4.7 && <5
    , base64-bytestring
    , bytestring
    , cookie >= 0.4
    , containers
    , data-default >= 0.7
    , dependent-map
    , dependent-sum
    , exception-transformers
    , file-embed
    , foreign-store
    , ghcjs-dom
    , here
    , jsaddle
    , jsaddle-warp
    , lens >= 4.16
    , mtl
    , pureMD5
    , reflex
    , reflex-dom-core
    , ref-tf
    , reflex-dom-contrib
    , reflex-dom-storage
    , reflex-dom-nested-routing
    , text
    , template-haskell >= 2.13
    , transformers
    , uri-bytestring >= 0.3
    , string-conversions
  default-language: Haskell2010

test-suite reflex-starter-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_reflex_starter
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

