name:           reflex-starter
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/reflex-starter#readme>
homepage:       https://github.com/githubuser/reflex-starter#readme
bug-reports:    https://github.com/githubuser/reflex-starter/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.org

source-repository head
  type: git
  location: https://github.com/githubuser/reflex-starter

library
  exposed-modules:
      Lib
  other-modules:
      Paths_reflex_starter
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable reflex-starter
  main-is: Main.hs
  other-modules:
      Paths_reflex_starter
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson >= 1.3
    , base >=4.7 && <5
    , bytestring
    , containers
    , file-embed
    , ghcjs-dom
    , jsaddle-warp
    , lens >= 4.16
    , mtl
    , reflex
    , reflex-dom
    , reflex-starter
    , ghcjs-dom
    , jsaddle
    , bytestring
    , text
    , foreign-store
    , reflex-dom-contrib
    , reflex-dom-storage
    , reflex-dom-nested-routing
    , dependent-map
    , dependent-sum
  default-language: Haskell2010

test-suite reflex-starter-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_reflex_starter
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
